pravka of the final pravka dz5

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header class="header">
         <div class="container header-container">
             <nav class="header-nav">
-                <a class="logo-link link" href="./index.html">Web<span class="logo-dark">Studio</span></a>
+                <a class="logo-link link logo-link-header" href="./index.html">Web<span class="logo-dark">Studio</span></a>
                 <ul class="header-nav-list list">
                     <li class="header-nav-item">
                         <a class="header-nav-link link current" href="./index.html">Студия</a>
